apps/starlink/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: networking-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: networking-tools
  template:
    metadata:
      annotations: 
        k8s.v1.cni.cncf.io/networks: bridge-test
      labels:
        app: networking-tools
    spec:
      containers:
      - name: networking-tools
        image: nicolaka/netshoot:latest
        command: ["sleep", "infinity"]
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
