apps/starlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwrt
spec:
  selector:
    vm: openwrt
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
